// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render active style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ bAZYuz"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render block style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ fYshSY"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ fTvbEr"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ fTvbEr"
  >
    Hello world
  </button>
</DocumentFragment>
`;
